spacing issue fix in pasenger

--- a/src/styles/sass/components/checkout/BookingDrawer.module.scss
+++ b/src/styles/sass/components/checkout/BookingDrawer.module.scss
@@ -66,7 +66,7 @@
 }
 
 .addtravellerBtn {
-   padding: 0px 24px 0px 0px;
+   padding: 0px;
    height: 79px;
    background: #FFFFFF;
    border: 1px dashed #E6EAEB;
